build config setup

--- a/app/css/base/_variables.scss
+++ b/app/css/base/_variables.scss
@@ -1,23 +1,30 @@
 // -----------------------------------------
-	// Layout Breakpoints
+// Layout Breakpoints
 // -----------------------------------------
 $maxWidth: 1280;
 
 
 // -----------------------------------------
-	// Font Sizes
+// Font Sizes
 // -----------------------------------------
 $regularSize: 12;
 
 
 // -----------------------------------------
-	// Font Families
+// Font Families
 // -----------------------------------------
 $helvetica: Helvetica, Arial, sans-serif;
 
 
+// -----------------------------------------
+// Layout max width
+// -----------------------------------------
+$wrapperWidth: 1200px;
+
 
 // -----------------------------------------
-	// Layout max width
+// Colors
 // -----------------------------------------
-$wrapperWidth: 1200px; 
+$color-bg: rgba(45, 45, 45, 1);
+$color-fg: rgba(204, 204, 204, 1);
+$color-neutral: rgba(128, 128, 128, 1);
