--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,20 +1,23 @@
 // ------------------------------------------
 //    Base
 //-------------------------------------------
-@import "base/mixins";
 @import "base/variables";
+@import "base/mixins";
 @import "base/extends";
 @import "base/normalize";
 @import "base/h5bp-top";
+@import "base/global";
 
 // ------------------------------------------
 //    Layout
 // ------------------------------------------
+@import "layout/global";
 @import "layout/grid";
 
 // ------------------------------------------
 //    Modules
 // ------------------------------------------
+@import "modules/global";
 @import "modules/header";
 @import "modules/footer";
 
